--- a/index.html
+++ b/index.html
@@ -170,9 +170,9 @@
 
     <p><h3>実際に行ってみた感想</h3></p>
     <p>
-        秩父わらじかつ亭には12時ごろにお伺いしました。<br>
-        前述した通り、このお店は「祭りの湯」という温泉施設内のフードコートに併設されています。発券機で食券を購入することでき、カツの枚数やカツカレーにするかどうかなども選ぶことができます。また、漬物や味噌汁もセットでついてきます。<br>
-        今回はスタンダードなわらじかつ丼を注文しました。普通のカツ丼よりもずっとインパクトがあり、衣もサクサクでジューシーなので最後まで飽きずに食べ続けることができました。フードコートではわらじかつ丼だけでなく、秩父名物の味噌ポテトや炙り豚味噌丼など様々なグルメを楽しむことができるのでこちらもおすすめとなっています。<br>
+        秩父わらじかつ亭には12時ごろにお伺いしました<br>
+        前述した通り、このお店は「祭りの湯」という温泉施設内のフードコートに併設されています。発券機で食券を購入することでき、カツの枚数やカツカレーにするかどうかなども選ぶことができます。また、漬物や味噌汁もセットでついてきます<br>
+        今回はスタンダードなわらじかつ丼を注文しました。普通のカツ丼よりもずっとインパクトがあり、衣もサクサクでジューシーなので最後まで飽きずに食べ続けることができました。フードコートにはわらじかつ丼だけでなく、秩父名物の味噌ポテトや炙り豚味噌丼など様々なグルメを楽しむことができるのでこちらもおすすめとなっています。<br>
         わらじかつを提供しているお店は秩父のあらゆる場所にあるのでぜひ、自分にあった味を見つけてください。
     </p>
  
@@ -195,7 +195,6 @@
         <img src="tatemono.jpg" alt="">
         <img src="omunaka.jpg" alt="">
     </div>
-
     <div class="map-container">
         <iframe 
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3228.978654767983!2d139.39251794072464!3d35.971947314063165!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6018d67768660e89%3A0xef33bd6948352c2c!2z44Kr44OV44Kn44Os44K544OI44Op44OzIOODm-ODg-ODiOODu-ODmeODquODvA!5e0!3m2!1sja!2sjp!4v1733366626783!5m2!1sja!2sjp" 
@@ -230,7 +229,7 @@
     <p><h3>実際に行ってみた感想</h3></p>
     <p>
        えいすけには19時頃に行かせていただきました。<br>
-       このお店の特徴は夫婦２人で運営しているところです。そのため、お店では出来立ての手作りをいただくことができ、お店と地域住民の温かいやりとりをみることができます。しかし、２人で営んでいる分提供スピードはあまり早くなく、今回は提供まで一時間ほどかかりました。ですので、待つことが苦手な方には向いていないかもしれません。ですが、その分味は絶品となっています。<br>
+       このお店の特徴は夫婦２人で運営しているということです。そのため、お店では出来立ての手作りのをいただくことができ、お店と地域住民の温かいやりとりをみることができます。しかし、２人で営んでいる分提供スピードはあまり早くなく、今回は提供まで一時間ほどかかりました。ですので、待つことが苦手の方には向いていないかもしれません。ですが、その分味は絶品となっています。<br>
        ビーフカツレツ定食はとてもまろやかで柔らかく、箸で挟んだだけでもちぎれてしまいそうなほどです。あまり脂っこくなく、口当たりはステーキに似たものを感じました。ビーフカツレツ定食は2000円ほどで少し高めな値段ですがそれに見合った、とても美味しい料理でした。ビーフカツレツ定食の他に安めのメニューもあり、そちらもクオリティーが高いので高いと感じる方もぜひ足を運んでみてください。
     </p>
 
@@ -407,7 +406,7 @@
     <p>
        開店時間である10:00を目安に伺いました。<br>
        電車の都合もあり、開店より少し早くに着いてしまったのですが開店より少し早めに店内に入れていただきました。店内に入った後もわざわざ暖房の効いた席に案内していただいたり、かき氷の食べ方やおすすめについても丁寧に説明していただき、とても親切な接客だったと印象に残りました。<br>
-       注文から数分後、注文が届きました。今回は阿佐美冷蔵秘伝の「蔵元秘伝みつ」をかけていただきました。普段お祭りで食べるようなかき氷よりもずっと氷がふわふわしていて、蜜もちょうど良い甘さでサクサク食べ進めることができ、これを食べれただけでも秩父に来て良かったと思えるほどです。<br>
+       注文から数分後、注文が届きました。今回は阿佐美冷蔵秘伝の「蔵元秘伝みつ」をかけていただきました。普段お祭りで食べるようなかき氷よりもずっと氷がふわふわしていて、蜜もちょうど良い甘さでサクサク食べ進めることができ、これを食べれただけでも秩父に来て良かったと思えるほど。<br>
        それに加え、食後は無料で足湯に入ることができ、かき氷で冷えた体を温めることができるサービスもついています。冬に訪れたのでかき氷は体が冷えてしまうと考えていましたが、結果としては大満足の体験ができました！
     </p> 
 
@@ -429,75 +428,120 @@
        この経験から、直接足を運ぶことの大切さを学ぶと同時に自分たちはまだまだ埼玉県について知らないんだということを思い知らされました。<br>
        今回は埼玉のグルメについての紹介でしたが今度は観光スポットやお土産についてのサイトも作成していきたいです。
     </p>
+    <div id="map"></div>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAxcAIRNMorFkqjEGGSvifJ3Qf0udKmFnk&callback=initMap" async defer></script>
+    <script>    
+        function initMap() {
+            // 地図の中心を埼玉県に設定
+            var saitama = { lat: 35.8617, lng: 139.6455 };
+
+            var map = new google.maps.Map(document.getElementById('map'), {
+                zoom: 10,
+                center: saitama
+            });
+
+            // お店の情報リスト
+            var locations = [
+                { name: "久良一", lat: 36.0509, lng: 139.5201 },
+                { name: "秩父わらじかつ亭", lat: 35.9904, lng: 139.0810 },
+                { name: "Cafeレストラン ホット・ベリー", lat: 35.9719, lng: 139.3925 },
+                { name: "えいすけ", lat: 35.8398, lng: 139.5518 },
+                { name: "韓国式チキン プルタッチキン", lat: 35.8753, lng: 139.7855 },
+                { name: "TonTonオンギー", lat: 35.9085, lng: 139.6226 },
+                { name: "大味", lat: 35.8281, lng: 139.6932 },
+                { name: "火鍋亭", lat: 35.9089, lng: 139.6236 },
+                { name: "世界にひとつだけのケーキcoco", lat: 35.9042, lng: 139.6116 },
+                { name: "阿左美冷蔵", lat: 36.0845, lng: 139.1119 }
+            ];
+
+            // マーカーを追加
+            locations.forEach(function(location) {
+                var marker = new google.maps.Marker({
+                    position: { lat: location.lat, lng: location.lng },
+                    map: map,
+                    title: location.name
+                });
+
+                var infoWindow = new google.maps.InfoWindow({
+                    content: `<h3>${location.name}</h3>`
+                });
+
+                marker.addListener('click', function() {
+                    infoWindow.open(map, marker);
+                });
+            });
+        }
+    </script>
+
     <hr>
     <h1>他のグルメを知りたい方はこちら</h1>
-<form id="search-form">
-  <input type="text" id="keyword" placeholder="料理名を入力">
-  <button type="submit">検索</button>
-</form>
-<div id="results"></div>
-Powered by <a href="https://webservice.recruit.co.jp/">ホットペッパーグルメ Webサービス</a>
+    <form id="search-form">
+        <input type="text" id="keyword" placeholder="料理名を入力">
+        <button type="submit">検索</button>
+    </form>
+    <div id="results"></div>
+    Powered by <a href="https://webservice.recruit.co.jp/">ホットペッパーグルメ Webサービス</a>
 
-<script>
-    const API_KEY = "c857f8f80790a31c"; // 事前に取得したAPIキー
-    const API_URL = "https://webservice.recruit.co.jp/hotpepper/gourmet/v1/";
+    <script>
+        const API_KEY = "c857f8f80790a31c"; // 事前に取得したAPIキー
+        const API_URL = "https://webservice.recruit.co.jp/hotpepper/gourmet/v1/";
   
-    document.getElementById("search-form").addEventListener("submit", async (event) => {
-      event.preventDefault(); // フォーム送信をキャンセル
+        document.getElementById("search-form").addEventListener("submit", async (event) => {
+            event.preventDefault(); // フォーム送信をキャンセル
   
-      const keyword = document.getElementById("keyword").value.trim();
-      if (!keyword) {
-        document.getElementById("results").innerHTML = "キーワードを入力してください。";
-        return;
-      }
+            const keyword = document.getElementById("keyword").value.trim();
+            if (!keyword) {
+                document.getElementById("results").innerHTML = "キーワードを入力してください。";
+                return;
+            }
   
-      document.getElementById("results").innerHTML = "検索中...";
+            document.getElementById("results").innerHTML = "検索中...";
   
-      // CORS回避用のプロキシ
-      const proxyUrl = "https://api.allorigins.win/raw?url=";
+            // CORS回避用のプロキシ
+            const proxyUrl = "https://api.allorigins.win/raw?url=";
   
-      // キーワードに「埼玉」を付加して、埼玉県内の結果が出やすくする
-      const searchQuery = encodeURIComponent(`${keyword} 埼玉`);
-      const requestUrl = `${API_URL}?key=${API_KEY}&format=json&keyword=${searchQuery}&count=30`;
+            // キーワードに「埼玉」を付加して、埼玉県内の結果が出やすくする
+            const searchQuery = encodeURIComponent(`${keyword} 埼玉`);
+            const requestUrl = `${API_URL}?key=${API_KEY}&format=json&keyword=${searchQuery}&count=30`;
   
-      try {
-        const response = await fetch(proxyUrl + encodeURIComponent(requestUrl));
+            try {
+                const response = await fetch(proxyUrl + encodeURIComponent(requestUrl));
   
-        if (!response.ok) {
-          throw new Error(`HTTPエラー: ${response.status}`);
+                if (!response.ok) {
+                    throw new Error(`HTTPエラー: ${response.status}`);
+                }
+  
+                const data = await response.json();
+                console.log("APIレスポンス:", data); // レスポンス内容をコンソールに表示
+  
+                if (data.results.shop && data.results.shop.length > 0) {
+                    displayResults(data.results.shop);
+                } else {
+                    document.getElementById("results").innerHTML = "該当するお店が見つかりませんでした。";
+                }
+            } catch (error) {
+                console.error("エラー:", error);
+                document.getElementById("results").innerHTML = "データ取得に失敗しました。";
+            }
+        });
+  
+        function displayResults(shops) {
+            const resultsDiv = document.getElementById("results");
+            resultsDiv.innerHTML = "";
+  
+            shops.forEach(shop => {
+                const shopDiv = document.createElement("div");
+                shopDiv.innerHTML = `
+                <h2>${shop.name}</h2>
+                <p>住所: ${shop.address}</p>
+                <p><a href="${shop.urls.pc}" target="_blank">店舗情報を見る</a></p>
+                <img src="${shop.photo.pc.l}" alt="${shop.name}">
+                <hr>
+                `;
+                resultsDiv.appendChild(shopDiv);
+            });
         }
-  
-        const data = await response.json();
-        console.log("APIレスポンス:", data); // レスポンス内容をコンソールに表示
-  
-        if (data.results.shop && data.results.shop.length > 0) {
-          displayResults(data.results.shop);
-        } else {
-          document.getElementById("results").innerHTML = "該当するお店が見つかりませんでした。";
-        }
-      } catch (error) {
-        console.error("エラー:", error);
-        document.getElementById("results").innerHTML = "データ取得に失敗しました。";
-      }
-    });
-  
-    function displayResults(shops) {
-      const resultsDiv = document.getElementById("results");
-      resultsDiv.innerHTML = "";
-  
-      shops.forEach(shop => {
-        const shopDiv = document.createElement("div");
-        shopDiv.innerHTML = `
-          <h2>${shop.name}</h2>
-          <p>住所: ${shop.address}</p>
-          <p><a href="${shop.urls.pc}" target="_blank">店舗情報を見る</a></p>
-          <img src="${shop.photo.pc.l}" alt="${shop.name}">
-          <hr>
-        `;
-        resultsDiv.appendChild(shopDiv);
-      });
-    }
-  </script>
+    </script>
   
 </body>
 </html>
